--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "concurrently": "^3.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.2.7",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
