--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "concurrently": "^3.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.2.7",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "react-materialize": "^2.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
