--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
     "materialize-css": "^0.100.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
