--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "concurrently": "^3.6.1",
     "express": "^4.16.3",
     "joi": "^13.6.0",
+    "joi-password-complexity": "^2.0.1",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
     "passport": "^0.4.0",
