--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon starter.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "start": "node starter.js"
+    "start": "node starter.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "prettier": {
     "singleQuote": true
