--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "materialize-css": "^0.100.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-materialize": "^2.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
