--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "joi": "^13.6.0",
     "joi-password-complexity": "^2.0.1",
     "jsonwebtoken": "^8.3.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.7",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
