--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "moment": "^2.22.2",
     "mongoose": "^5.2.7",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "react-parallax": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3",
