--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "materialize-css": "^0.100.2",
     "moment": "^2.22.2",
     "react": "^16.4.2",
+    "react-animated-text": "^0.1.3",
     "react-dom": "^16.4.2",
     "react-materialize": "^2.4.2",
     "react-redux": "^5.0.7",
