--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,6 @@
     }
   },
   "devDependencies": {
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "webpack": "^4.17.2"
+    "extract-text-webpack-plugin": "^4.0.0-beta.0"
   }
 }
